Enable in-place update model
Signed-off-by: Sicheng Song <sicheng.song@outlook.com>